# corolib

./: .cproject  .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  LICENSE  ReadMe.md  corolib Debug.launch  corolib Release.launch  corolib.ioc
Core/Inc/: CIrqCallback.h  CUartAdapter.h  FreeRTOSConfig.h  stm32f4xx_it.h
Core/Src/: CIrqCallback.cpp  CUartAdapter.cpp  main.c  main.cpp  main_.cpp  stm32f4xx_hal_msp.c
Core/Src/corolib/: CAwaitableIoTask.h  CTaskScheduler.cpp  CTaskScheduler.h  CUartAdapter.cpp  CUartAdapter.h  CUartReadTask.cpp  CUartReadTask.h
MCUSlave/: .cproject  .mxproject  .project  MCUSlave.ioc  MCUSlave.launch  STM32F756.launch
MCUSlave/Core/Inc/: stm32f7xx_hal_conf.h  stm32f7xx_it.h
MCUSlave/Core/Src/: main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
STM32CubeIDE/: .cproject  .mxproject  .project  corolib Debug.launch  corolib Release.launch  corolib.ioc
STM32CubeIDE/Core/Inc/: CIrqCallback.h  FreeRTOSConfig.h  stm32f4xx_it.h
corolib/: Awaitable.h  CMakeLists.txt  FireAndForget.h
corolib/linux/: AwaitableIoTask.h  CMakeLists.txt  EntryPointAwaitable.h  EpollCallback.h  IoEventHandler.cpp  IoEventHandler.h  SerialPort.cpp  SerialPort.h  SerialPortReceiveTask.cpp  SerialPortReceiveTask.h  SerialPortSendTask.cpp  SerialPortSendTask.h  SocketAcceptTask.cpp  SocketAcceptTask.h  SocketAddressConverter.cpp  SocketAddressConverter.h  SocketReceiveTask.cpp  SocketReceiveTask.h  SocketSendTask.cpp  SocketSendTask.h  TcpSocket.cpp  TcpSocket.h
examples/: CMakeLists.txt  main.cpp  simple_coroutine.cpp  test_serial_port.cpp  test_socket.cpp
(+39 files in other folders)
